k8s/bases/apps/actual-budget/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: actual-budget
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
